Project setup continued. Onboarding.

--- a/subvt/src/main/res/values/strings.xml
+++ b/subvt/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SubVT</string>
+    <string name="introduction_title">Welcome to SubVT</string>
+    <string name="introduction_subtitle">Use SubVT to monitor and get notified about Substrate-based proof-of-stake networks and your validators on them.</string>
+    <string name="introduction_get_started">Get Started</string>
+    <string name="introduction_icon_volume_description">SubVT icon</string>
 </resources>
