--- a/subvt/src/main/res/values/strings.xml
+++ b/subvt/src/main/res/values/strings.xml
@@ -1,7 +1,19 @@
 <resources>
     <string name="app_name">SubVT</string>
+
     <string name="introduction_title">Welcome to SubVT</string>
     <string name="introduction_subtitle">Use SubVT to monitor and get notified about Substrate-based proof-of-stake networks and your validators on them.</string>
     <string name="introduction_get_started">Get Started</string>
     <string name="introduction_icon_volume_description">SubVT icon</string>
+
+    <string name="onboarding_skip">Skip</string>
+    <string name="onboarding_next">Next</string>
+    <string name="onboarding_1_title">Monitor Your Network</string>
+    <string name="onboarding_1_description">Use SubVT to observe supported Substrate-based proof-of-stake blockchain networks. Display live network status, list of validators and their activities and details, all in real-time, block-by-block.</string>
+    <string name="onboarding_2_title">Observe Your Validators</string>
+    <string name="onboarding_2_description">Bookmark your validators and define notification rules for them to receive push notifications for many events and extrinsics.</string>
+    <string name="onboarding_3_title">Understand Your Network</string>
+    <string name="onboarding_3_description">SubVT provides you with detailed past era and validator activity reports. Gain insight and understanding about the network and staking dynamics to improve the performance of your validators.</string>
+    <string name="onboarding_4_title">Soon™: Beyond the Blocks</string>
+    <string name="onboarding_4_description">Telemetry support is coming soon to SubVT: get even more reports and notifications about your validators\' peer count, upload and download bandwidth, block height, client version and more.</string>
 </resources>
