--- a/subvt/src/main/res/values/strings.xml
+++ b/subvt/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SubVT</string>
+    <string name="default_notification_channel_id">subvt</string>
 
     <string name="cancel">Cancel</string>
     <string name="retry">Retry</string>
