Overall UI fine-tuning pt.2.

--- a/subvt/src/main/res/values/strings.xml
+++ b/subvt/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="cancel">Cancel</string>
     <string name="retry">Retry</string>
+    <string name="search">Search</string>
 
     <string name="description_back">Go back</string>
 
