--- a/subvt/src/main/res/values/strings.xml
+++ b/subvt/src/main/res/values/strings.xml
@@ -58,6 +58,9 @@
     <string name="network_status_validator_backings_maximum">Maximum</string>
 
     <string name="my_validators_tab_title">My Validators</string>
+    <string name="my_validators_title">My Validators</string>
+    <string name="my_validators_add_validator">Add Validator</string>
+    <string name="my_validators_error">Error while fetching your validators.</string>
 
     <string name="notifications_tab_title">Notifications</string>
 
